# some_test

back_trace/: a.out  test.cpp
bash_test/: cd.sh  local.sh
bind_test/: a.out  test.cpp  test2.cpp
bishi_question/: 000001.pool5  000001.prob  a.out  q1.cpp  read.cpp  read_file.cpp  test  test.txt  write_file.cpp
boost_python/: main.cpp
boost_python_test/: gen.sh  test_class.cpp  test_class.h  test_class_wrapper.cpp  tmp  wapper2.cpp
cmake_test/test2/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake_test/test3/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake
cmake_test/test4/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake
cmake_test/test5/: CMakeLists.txt  a.out  main.cpp
cmake_test/test5/cmake/: test.cmake
cmake_test/test5/math/: CMakeLists.txt  MathFunction.cpp
cmake_test/test5/math2/: CMakeLists.txt  MathFunction2.cpp  MathFunction2.h
cmake_test/test6/: CMakeCache.txt  CMakeLists.txt  main.cc
cmake_test/test7/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake_test/test8/: CMakeLists.txt  init.cmake
cmake_test/test8/math/: .CMakeLists.txt.swp  CMakeLists.txt  MathFunction.cpp
cmake_test/test8/math2/: CMakeLists.txt
ctags_test/: main.cpp  tags
ctags_test/lib/: my_class.cpp  my_class.h
define_test/: a.out  test.cpp
define_test/test2/: a.out  func.cpp  func.h  main.cpp
dir_test/: a.out  test.cpp
enum_test/: a.out  test1.cpp
file_test/: a.out  test1.cpp
gflag_test/: Makefile  main  main.ERROR  main.FATAL  main.INFO  main.WARNING  main.lianhe-ThinkPad-T470p.lianhe.log.ERROR.20180830-142819.20009  main.lianhe-ThinkPad-T470p.lianhe.log.ERROR.20180830-143933.20365  main.lianhe-ThinkPad-T470p.lianhe.log.INFO.20180830-142051.19600  main.lianhe-ThinkPad-T470p.lianhe.log.INFO.20180830-142053.19603  main.lianhe-ThinkPad-T470p.lianhe.log.INFO.20180830-142250.19697  main.lianhe-ThinkPad-T470p.lianhe.log.INFO.20180830-143959.20379  main.lianhe-ThinkPad-T470p.lianhe.log.INFO.20180830-144051.20404  main.lianhe-ThinkPad-T470p.lianhe.log.WARNING.20180830-142250.19697  test.cpp
git-hooksDemo/: package.json
ioctl_test/: app-ioctl.c  memdev.c  memdev.h
kernel_test/: .cache.mk  .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd  Makefile  hello.c  hello.ko  hello.mod.c  modules.order
kernel_test/.tmp_versions/: hello.mod
lib_test/: a.out  main.cpp  myAPI.cpp  output
num_test/: a.out  test1.cpp
ofstream_test/: a.out  test4.cpp
point_test/: Readme.md  a.out  test1.cpp
python_test/: main.py
python_test/__init__test/: Readme.md  main.py  test.py
python_test/__init__test/client/: __init__.py  func.py
python_test/class/: test.py
python_test/property/: test.py
shared_ptrtest/: a.out  test.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test_shared_ptr.cpp
template_test/: a.out  test.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp
tensorflow_test/: README.md
tensorflow_test/test1/: Untitled.ipynb  Untitled1.ipynb  tensorboard_test.ipynb  test1.ipynb
tensorflow_test/test1/.ipynb_checkpoints/: name_scope_test-checkpoint.ipynb
tensorflow_test/test1/logs/: events.out.tfevents.1542959409.6cde538ad922  events.out.tfevents.1542961593.6cde538ad922  events.out.tfevents.1542961610.6cde538ad922  events.out.tfevents.1542962337.6cde538ad922  events.out.tfevents.1542962532.6cde538ad922  events.out.tfevents.1542962560.6cde538ad922  events.out.tfevents.1542963171.6cde538ad922  (+1 more)
test_attribute/: a.out  test.cpp
unit_test/: a.out  test1.cpp
weak_symbol/test1/: symbol222.c  weak  weak.c
weak_symbol/test2/: Makefile  README.MD  a.out  output  strong.c
weak_symbol/test3/: weak2.c
weak_symbol/test4/: .README.md.swp  .compile.sh.swp  CMakeLists.txt  README.md  compile.sh  main.c  test1.out  test3.out  test4.out  test6.out  tmp  tmp1  tmp2  weak.c  weak.h
weak_symbol/test5/: a.out  hello.c  test.c  world.c
